gonna make this mine

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Box personal portfolio Template</title>
-    <link rel="icon" href="img/fav.png" type="image/x-icon">
+    <title>Another</title>
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -83,9 +83,9 @@
             <div class="table-cell">
                 <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
-                        <b class="is-visible">design.</b>
-                        <b>&nbsp;coding.</b>
-                        <b>graphic.</b>
+                        <b class="is-visible">XR.</b>
+                        <b>&nbsp;code.</b>
+                        <b>Ui/UX.</b>
                     </span>
 		        </h1>
                 <h5>everything you need to build your personal portfolio</h5>
@@ -98,180 +98,181 @@
         <!-- end box-intro -->
     </div>
 
-    <!-- portfolio div -->
-    <div class="portfolio-div">
-        <div class="portfolio">
-            <div class="no-padding portfolio_container">
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6  fashion logo">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mockups in seconds</span>
-                                    <em>Fashion / Logo</em>
-                                </div>
+ <!-- portfolio div -->
+ <div class="portfolio-div">
+    <div class="portfolio">
+        <div class="no-padding portfolio_container">
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6  fashion logo">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Mockups in seconds</span>
+                                <em>Fashion / Logo</em>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 ads graphics">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Floating mockups</span>
-                                    <em>Ads / Graphics</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-6 col-sm-12 photography">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 fashion ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Held by hands</span>
-                                    <em>Fashion / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-6 col-sm-12 photography">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
+                    </div>
+                </a>
             </div>
-            <!-- end portfolio_container -->
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6 ads graphics">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Floating mockups</span>
+                                <em>Ads / Graphics</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-6 col-sm-12 photography">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Photorealistic smartwatch</span>
+                                <em>Photography</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6 fashion ads">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Held by hands</span>
+                                <em>Fashion / Ads</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6 graphics ads">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Mobile devices</span>
+                                <em>Graphics / Ads</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-6 col-sm-12 photography">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Photorealistic smartwatch</span>
+                                <em>Photography</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6 graphics ads">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Mobile devices</span>
+                                <em>Graphics / Ads</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6 graphics ads">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Mobile devices</span>
+                                <em>Graphics / Ads</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6 graphics ads">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Mobile devices</span>
+                                <em>Graphics / Ads</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
+
+            <!-- single work -->
+            <div class="col-md-3 col-sm-6 graphics ads">
+                <a href="single-project.html" class="portfolio_item">
+                    <img src=img/Example.jpg alt="image" class="img-responsive" />
+                    <div class="portfolio_item_hover">
+                        <div class="portfolio-border clearfix">
+                            <div class="item_info">
+                                <span>Mobile devices</span>
+                                <em>Graphics / Ads</em>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- end single work -->
         </div>
-        <!-- portfolio -->
+        <!-- end portfolio_container -->
     </div>
-    <!-- end portfolio div -->
+    <!-- portfolio -->
+</div>
+<!-- end portfolio div -->
+
 
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">Another Vishal</p>
         </div>
     </footer>
     <!-- end footer -->
