--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
 <div class="container-fluid">
     <!-- box header -->
-    <header class="box-header">
+    <!-- <header class="box-header"> -->
+        <header >
         <!-- <div class="box-logo">
             <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
         </div> -->
