--- a/index.html
+++ b/index.html
@@ -59,17 +59,15 @@
             
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="services.html" class="nav-link">Services</a>
+                    <a href="services.html" class="nav-link">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Blog</a>
+                    <a href="#" class="nav-link">AR experience</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">About</a>
                 </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
+             
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
