is it uploading ?

--- a/index.html
+++ b/index.html
@@ -137,21 +137,7 @@
 
 
 
-               <!-- single work -->
-               <div class="col-md-6 col-sm-12 photography">
-                <a href="single-project.html" class="portfolio_item">
-                    <img src=img/Example.jpg alt="image" class="img-responsive" />
-                    <div class="portfolio_item_hover">
-                        <div class="portfolio-border clearfix">
-                            <div class="item_info">
-                                <span>Photorealistic smartwatch</span>
-                                <em>Photography</em>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <!-- end single work -->
+               
             
                   <!-- single work -->
                   <div class="col-md-6 col-sm-12 photography">
@@ -220,7 +206,7 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
+                                    <span>Photorealistic smartwatch 1</span>
                                     <em>Photography</em>
                                 </div>
                             </div>
