--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
 
+ 
+     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- mouse -->
+ 
+
+
+
+
 </head>
 
 <body>
@@ -115,8 +124,6 @@
                     <b class="is-visible">Another.</b>
                     <b>&nbsp;Vishal.</b>
                   
-                    <b>XR.</b>
-                    <b>Design.</b>
 
                 </span>
             </h1>
@@ -143,11 +150,11 @@
                   <div class="col-md-6 col-sm-12 photography">
                     <a href="single-project.html" class="portfolio_item">
                         <img src=img/Example.jpg alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
+                        <div  class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <em class="magic-hover magic-hover__square">Photography</em>
                                 </div>
                             </div>
                         </div>
@@ -162,7 +169,7 @@
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <em class="magic-hover magic-hover__square">Photography</em>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +184,7 @@
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <em class="magic-hover magic-hover__square">Photography</em>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +199,7 @@
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <em class="magic-hover magic-hover__square">Photography</em>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +214,7 @@
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Photorealistic smartwatch 1</span>
-                                    <em>Photography</em>
+                                    <em class="magic-hover magic-hover__square">Photography</em>
                                 </div>
                             </div>
                         </div>
@@ -273,6 +280,20 @@
     <!--  custom script -->
     <script src="js/custom.js"></script>
 
+    <!-- mouse script -->
+    <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1636192990/magicmouse/magic_mouse-1.2.1.cdn.min.js"></script>
+
+    <script type="text/javascript">
+        options = {
+        "cursorOuter": "circle-basic",
+        "hoverEffect": "circle-move",
+        "hoverItemMove": true,
+        "defaultCursor": true,
+        "outerWidth": 100,
+        "outerHeight": 100
+          };
+        magicMouse(options);
+    </script>
 </body>
 
 </html>
