--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
 
+    <link href="./pointer.css" rel="stylesheet">
+
  
      
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -280,20 +282,14 @@
     <!--  custom script -->
     <script src="js/custom.js"></script>
 
-    <!-- mouse script -->
-    <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1636192990/magicmouse/magic_mouse-1.2.1.cdn.min.js"></script>
 
-    <script type="text/javascript">
-        options = {
-        "cursorOuter": "circle-basic",
-        "hoverEffect": "circle-move",
-        "hoverItemMove": true,
-        "defaultCursor": true,
-        "outerWidth": 100,
-        "outerHeight": 100
-          };
-        magicMouse(options);
-    </script>
 </body>
-
+  <script src="./pointer.js"></script>
+    <script>
+       init_pointer({
+  pointerColor: "#ffbf00",
+  ringSize: 12,
+  ringClickSize: 20
+})
+    </script>
 </html>
