--- a/single-project.html
+++ b/single-project.html
@@ -183,6 +183,21 @@
     <!--  custom script -->
     <script src="js/custom.js"></script>
 
+     <!-- mouse script -->
+     <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1636192990/magicmouse/magic_mouse-1.2.1.cdn.min.js"></script>
+
+     <script type="text/javascript">
+         options = {
+         "cursorOuter": "circle-basic",
+         "hoverEffect": "pointer-overlay",
+         "hoverItemMove": false,
+         "defaultCursor": false,
+         "outerWidth": 30,
+         "outerHeight": 30,
+           };
+         magicMouse(options);
+     </script>
+
 </body>
 
 </html>
